<resources>
    <string name="app_name">GitHub App</string>

    <string name="hint_search">Ketik untuk mencari user</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repositories">Repositories</string>
    <string name="search">Search</string>
    <string name="detail_user">Detail User</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="desc_dark_mode">Make your application theme dark and eye-friendly in low light environments.</string>

</resources>